--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<!--
+Generate the full homepage using the design-brief.md and content files.
+Use the logo in assets/logo.jpeg
+Use the cyber-cowboy palette
+Include a hero, value props, product highlights, and CTA
+-->
