--- a/products.html
+++ b/products.html
@@ -1,1 +1,6 @@
-
+<!--
+Generate the full products page using the design-brief.md and copy-content.md files
+Use the styling in styles.css
+Use the logo in assets/logo.jpeg
+Generate individual entries for each product
+-->
