--- a/about.html
+++ b/about.html
@@ -1,1 +1,7 @@
-
+<!--
+Generate the full "About" with sections for "Our Story" and "Our People"
+Use the logo in /assets/logo.jpeg
+For the entry on Allen Goodner in "Our People" use the headshot in assets/headshot.jpg
+Use the copy in copy-content.md as a starting point
+Use the styles in styles.css
+-->
