--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,5 @@
-
+<!--
+Create a folder /posts
+Create a file called blog-template.html with placeholder HTML tags for future posts.
+Use the styles and information from styles.css and design-brief.md
+-->
