--- a/index.html
+++ b/index.html
@@ -1,6 +1,91 @@
-<!--
-Generate the full homepage using the design-brief.md and content files.
-Use the logo in assets/logo.jpeg
-Use the cyber-cowboy palette
-Include a hero, value props, product highlights, and CTA
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digital Prairie Enterprises</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="blog.html">Blog</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-logo">
+      <img src="assets/logo.jpeg" alt="Digital Prairie Enterprises Logo">
+    </div>
+    <div class="hero-content">
+      <h1 class="hero-title">Digital Prairie Enterprises</h1>
+      <p class="hero-subtitle">
+        Rugged meets futuristic.<br>
+        <span style="color:var(--neon-accent); text-shadow:0 0 8px var(--cowboy-dark);">
+          Cyber-cowboy solutions for the modern frontier.
+        </span>
+      </p>
+      <a class="cta-btn" href="products.html">Explore Our Products</a>
+    </div>
+  </section>
+
+  <section class="values">
+    <h2>Our Values</h2>
+    <div class="value-list">
+      <div class="value-item">
+        <strong>Craft</strong>
+        <br>
+        We’re proud of what we do, and we do it the right way.
+      </div>
+      <div class="value-item">
+        <strong>Community</strong>
+        <br>
+        We’re all better when we work together.
+      </div>
+      <div class="value-item">
+        <strong>Commitment</strong>
+        <br>
+        When we say it, we mean it.
+      </div>
+      <div class="value-item">
+        <strong>Clarity</strong>
+        <br>
+        Good tools make life clearer, not louder.
+      </div>
+    </div>
+  </section>
+
+  <section class="products">
+    <h2>Product Highlights</h2>
+    <div class="product-list">
+      <div class="product-item">
+        <strong>Mindweave</strong>
+        <br>
+        A gentle, comforting companion for your mindfulness journey.<br>
+        Collect your thoughts, reflect, and let them settle in a space built for honest thinking.
+      </div>
+      <div class="product-item">
+        <strong>Emergent MindMap</strong>
+        <br>
+        Connect your thoughts in ways you hadn’t considered.<br>
+        Explore and arrange ideas visually—a field wide open for discovery.
+      </div>
+      <div class="product-item">
+        <strong>Habit Games</strong>
+        <br>
+        Gamified habit building, without the grind.<br>
+        Simple, steady tools to help you grow and stick with what matters most.
+      </div>
+    </div>
+    <a class="cta-btn" href="contact.html">Get Started</a>
+  </section>
+
+  <footer>
+    &copy; 2026 Digital Prairie Enterprises &mdash; Contact: <a style="color: var(--neon-accent);" href="mailto:allen@digitalprairieenterprises.com">allen@digitalprairieenterprises.com</a>
+  </footer>
+</body>
+</html>
