--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,46 @@
-<!--
-Create a folder /posts
-Create a file called blog-template.html with placeholder HTML tags for future posts.
-Use the styles and information from styles.css and design-brief.md
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Blog – Digital Prairie Enterprises</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Digital Prairie Blog</h1>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/about.html">About</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
+  </header>
+  <main class="products">
+    <section>
+      <h2>Latest Posts</h2>
+      <div class="blog-list product-list">
+        <!--
+          Add a new anchor below for each new post, for example:
+          <a class="product-item" href="/posts/my-first-post.html">
+            <h3>My First Post Title</h3>
+            <p class="blog-meta">January 1, 2026 &middot; Allen Goodner</p>
+            <p>Short summary or excerpt of the post goes here.</p>
+          </a>
+          Copy the above structure per post.
+        -->
+        <!-- Example Entry: -->
+        <!--
+        <a class="product-item" href="/posts/example-post.html">
+          <h3>Example Post Title</h3>
+          <p class="blog-meta">Month Day, Year &middot; Author Name</p>
+          <p>This is a summary or opening excerpt for the post.</p>
+        </a>
+        -->
+      </div>
+    </section>
+  </main>
+  <footer>
+    &copy; 2026 Digital Prairie Enterprises. All rights reserved.
+  </footer>
+</body>
+</html>
