--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,5 @@
-
+<!-- Create a basic "Contact" page 
+ use the information in copy-content.md and design-brief.md
+ use the styles defined in styles.css
+ the "Email Us" link should open with a `mailto` tag
+-->
