--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,63 @@
-<!-- Create a basic "Contact" page 
- use the information in copy-content.md and design-brief.md
- use the styles defined in styles.css
- the "Email Us" link should open with a `mailto` tag
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact | Digital Prairie Enterprises</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Contact</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h2 class="hero-title">Get in Touch</h2>
+        <p class="hero-subtitle">
+          Want to learn more about Digital Prairie Enterprises, our tools, or have a question? Drop us a line any time.
+        </p>
+        <a href="mailto:info@digitalprairieenterprises.com" class="cta-btn">Email Us</a>
+      </div>
+    </section>
+    <section class="values">
+      <h2>Our Roots</h2>
+      <p>
+        Digital Prairie Enterprises was born in Eastland, Texas, where folks still believe in steady work, clear thinking, and keeping your word. We’re a small studio with a long view, building tools and an ecosystem to help people think straighter, map ideas, and build lasting habits.
+      </p>
+      <p>
+        We believe good tools should feel like good neighbors—helpful, dependable, never in the way. Technology ought to make life clearer, not louder.
+      </p>
+      <ul class="value-list">
+        <li class="value-item">Honest design &amp; solid engineering</li>
+        <li class="value-item">Respect for the people who use our tools</li>
+        <li class="value-item">Roots in Texas, built for anywhere</li>
+      </ul>
+    </section>
+    <section class="values">
+      <h2>Who You'll Reach</h2>
+      <div class="value-list">
+        <div class="value-item">
+          <strong>Allen Goodner</strong><br>
+          Founder &amp; Senior Architect<br>
+          Eastland, Texas
+          <p>
+            Four generations deep, Allen’s family calls Cisco, Eastland, and Ranger home. He pairs software engineering with people leadership—guiding teams, shaping products, and always keeping the work pointed in the right direction.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2026 Digital Prairie Enterprises. Roots in Texas, built to last.
+  </footer>
+</body>
+</html>
